@@ -1,3 +1,8 @@
+Mon Feb  5 02:47:29 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsenoise.cc: Added deterministic random number generator (from
+	rapicorn) and use it if --bse-disable-randomization is active.
+
 Mon Feb  5 01:31:02 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsenoise.cc: Bugfix: Generate a noise table with the same size,
